Fixed the layout of delete button on the navbar and fixed the spacing on the footer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -137,3 +137,8 @@
 .alert {
     margin-top: 75px;
 }
+
+.delete {
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+}
